# msr-utmos

./: .gitignore  LICENSE  README.md  config.yaml  config_hubert.yaml  config_wavlm.yaml  create_checkpoint_transfer.ipynb  demo.py  launch.sh  pyproject.toml  upload_model.ipynb  vmc24_mos_v2
configs/distill/: config.yaml  config_w2v2.yaml
configs/mos/finetune/: finetune_hubert.yaml  finetune_sfi_hubert.yaml  finetune_sfi_w2v2.yaml  finetune_sfi_w2v2_checkpoint_copy.yaml  finetune_sfi_wavlm.yaml  finetune_w2v2.yaml  finetune_wavlm.yaml  scratch_hubert.yaml  scratch_sfi_hubert.yaml  scratch_sfi_w2v2.yaml  scratch_sfi_wavlm.yaml  scratch_w2v2.yaml  scratch_wavlm.yaml
configs/mos/finetune_condition_sr/: finetune_hubert.yaml  finetune_w2v2.yaml  finetune_wavlm.yaml  scratch_hubert.yaml  scratch_w2v2.yaml  scratch_wavlm.yaml
configs/mos/pretrain/: pretrain_hubert.yaml  pretrain_sfi_hubert.yaml  pretrain_sfi_w2v2.yaml  pretrain_sfi_w2v2_encoder_copy.yaml  pretrain_sfi_wavlm.yaml  pretrain_w2v2.yaml  pretrain_wavlm.yaml  scratch_w2v2.yaml
job_scripts/distill/: hubert.sh  wav2vec2.sh  wavlm.sh
job_scripts/mos/: predict.sh
job_scripts/mos/finetune/pretrained/: sfi_hubert.sh  sfi_w2v2.sh  sfi_w2v2_checkpoint_copy.sh  sfi_wavlm.sh  w2v2.sh  wavlm.sh
job_scripts/mos/finetune/scratch/: hubert.sh  sfi_hubert.sh  sfi_w2v2.sh  sfi_wavlm.sh  w2v2.sh  wavlm.sh
job_scripts/mos/finetune/sr_conditioning/: finetune_hubert.sh  finetune_w2v2.sh  finetune_wavlm.sh  scratch_hubert.sh  scratch_w2v2.sh  scratch_wavlm.sh
job_scripts/mos/pretrain/: hubert.sh  sfi_hubert.sh  sfi_w2v2.sh  sfi_w2v2_encoder_copy.sh  sfi_wavlm.sh  w2v2.sh  wavlm.sh
src/sfi_utmos/: train.py  train_mos.py
src/sfi_utmos/data/dataset/: glob_wav_dataset.py  mos_dataset.py
src/sfi_utmos/model/: distill_ssl.py  ssl_mos.py
