[project]
name = "sfi-utmos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Wataru Nakata", email = "wataru9871@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "gradio>=5.38.0",
    "jsonargparse[signatures]>=4.40.0",
    "lightning>=2.5.1.post0",
    "pandas>=2.2.3",
    "schedulefree>=1.4.1",
    "scipy>=1.15.3",
    "torch>=2.7.0",
    "torchaudio>=2.7.0",
    "transformers>=4.52.3",
    "wandb>=0.19.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
